[gd_scene load_steps=5 format=3 uid="uid://beqnqvdu0ub0c"]

[ext_resource type="Script" uid="uid://chc0ibvr55kbi" path="res://addons/message_hider/ctx/message_hider.gd" id="1_ol1go"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ol1go"]
bg_color = Color(0.129412, 0.14902, 0.180392, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.0356261, 0.0452625, 0.0608344, 1)
border_blend = true

[sub_resource type="LabelSettings" id="LabelSettings_ol1go"]
font_size = 12
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fr5al"]
font_size = 12

[node name="MessageHider" type="Popup" node_paths=PackedStringArray("file_dialog", "open_file", "out_file", "secret_file", "secret_area", "message", "addlabel", "ok", "cancel")]
size = Vector2i(327, 383)
visible = true
script = ExtResource("1_ol1go")
file_dialog = NodePath("PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/FileDialog")
open_file = NodePath("PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/HBoxContainer/LineEdit")
out_file = NodePath("PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/HBoxContainer3/LineEdit")
secret_file = NodePath("PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader/HBoxContainer/LineEdit")
secret_area = NodePath("PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader/ScrollContainer/LineEdit")
message = NodePath("PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/ScrollContainer/LineEdit")
addlabel = NodePath("PanelContainer/MarginContainer/VBoxContainer/Message")
ok = NodePath("PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/HBoxContainer2/OkButton")
cancel = NodePath("PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/HBoxContainer2/CancelButton")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ol1go")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Message Hider"
label_settings = SubResource("LabelSettings_ol1go")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Writer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="FileDialog" type="FileDialog" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer"]
title = "Open a File"
initial_position = 4
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer"]
layout_mode = 2
text = "From Image"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Input Image Path"
alignment = 1
clear_button_enabled = true

[node name="InputSearch" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/HBoxContainer"]
layout_mode = 2
text = "Search"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer"]
layout_mode = 2
text = "To Image"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Output Image File"
alignment = 1
clear_button_enabled = true

[node name="OutputSearch" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/HBoxContainer3"]
layout_mode = 2
text = "Search"

[node name="ClearMsg" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer"]
layout_mode = 2
text = "Clear Secret Message"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_vertical = 3

[node name="LineEdit" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Secret message here!"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/HBoxContainer2"]
layout_mode = 2

[node name="OkButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "OK"

[node name="Reader" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="FileDialog" type="FileDialog" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader"]
auto_translate_mode = 1
title = "Open a File"
initial_position = 4
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader"]
layout_mode = 2
text = "From Image"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Secret Message Image Path"
alignment = 1
clear_button_enabled = true

[node name="SecretSearch" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader/HBoxContainer"]
layout_mode = 2
text = "Search"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_vertical = 3

[node name="LineEdit" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Search image with secret."

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader/HBoxContainer2"]
layout_mode = 2

[node name="SecretOkButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "OK"

[node name="Message" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Set paths and write a message!"
label_settings = SubResource("LabelSettings_fr5al")
horizontal_alignment = 1

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="go_back_requested" from="." to="." method="_on_go_back_requested"]
[connection signal="dir_selected" from="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="file_selected" from="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/HBoxContainer/InputSearch" to="." method="_on_input_search_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/HBoxContainer3/OutputSearch" to="." method="_on_output_search_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/ClearMsg" to="." method="_on_clear_msg_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Writer/HBoxContainer2/OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="dir_selected" from="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader/FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="file_selected" from="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader/HBoxContainer/SecretSearch" to="." method="_on_secret_search_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TabContainer/Reader/HBoxContainer2/SecretOkButton" to="." method="_on_secret_ok_button_pressed"]
